# CppGrpcDb2

./: .gitignore  CLAUDE.md  CMakeLists.txt  Readme.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.specify/memory/: constitution.md
.specify/templates/: tasks-template.md
cmake/: common.cmake  db2.cmake  grpc.cmake  gtest.cmake  jsoncpp.cmake  opentelemetry.cmake  prometheus.cmake  spdlog.cmake  utf8ansi.cmake
doc/: db2_ref.md  opentelemetry_tracing.md  prometheus-cpp-guide.md  resource_handle.md  resource_pool.md  resource_pool_vs_handle.md  worker_pool.md
docker/: README.md  docker-compose.yaml  otel-collector-config.yaml
include/: byte_logging.h  calldata_metrics.h  message_logging_interceptor.h  metrics_interceptor.h  string_transform_interceptor.h
include/db2/: db2.hpp
include/tracing/: grpc_tracing_interceptor.h  trace_log_formatter.h  tracer_provider.h
protos/: order.proto
specs/001-otel-grpc-tracing/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-otel-grpc-tracing/checklists/: requirements.md
specs/001-otel-grpc-tracing/contracts/: trace-context-propagation.md
src/: complex_async_server_single_cq.cpp  greeter_async_client.cpp  greeter_callback_client.cpp  greeter_callback_server.cpp  greeter_callback_server_no_db2.cpp  greeter_client.cpp  greeter_girl_client.cpp  greeter_server.cpp  message_logging_interceptor.cpp  test_tracer_grpc.cpp  test_tracer_init.cpp
src/call_data/: CallData.h  GreeterSayHelloCallData.cpp  GreeterSayHelloCallData.h  HelloGirlSayHelloCallData.cpp  HelloGirlSayHelloCallData.h
src/db2/: db2.cpp
src/encode/: byte_logging.cpp
src/interceptor/: message_logging_interceptor.cpp  metrics_interceptor.cpp  string_transform_interceptor.cpp  test_string_interceptor.cpp
src/metrics/: calldata_metrics.cpp
src/msvc/: msvc.cpp  msvc.h
src/resource/: resource_handle.h  resource_pool.hpp
src/tracing/: grpc_tracing_interceptor.cpp  tracer_provider.cpp
src/util/: sql_util.cpp  sql_util.h  string_util.cpp  string_util.h
src/worker/: WorkerPool.h
tests/db2/: test_db2_wrapper.cpp
tests/integration/: test_otlp_export.cpp  test_performance.cpp  test_span_attributes.cpp  test_trace_propagation.cpp  test_tracing_e2e.cpp
tests/msvc/: test_max.cpp  test_stricmp.cpp  test_strset.cpp  test_strupr.cpp
tests/resource/: test_resource_handle_refactor.cpp
tests/unit/: test_batch_processor.cpp  test_grpc_interceptor.cpp  test_tracer_provider.cpp
tests/util/: test_sql_util.cpp  test_string_util.cpp
tests/worker/: test_worker_pool.cpp
